<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.auth.register.create.CreateNewAccountFragment"

    >

    <data>

        <variable
            name="disposables"
            type="io.reactivex.disposables.CompositeDisposable"
            />

        <variable
            name="mobileNumber"
            type="String"
            />

        <variable
            name="viewModel"
            type="com.ugo.oze.presentation.auth.register.CreateAccountViewModel"
            />

        <import type="android.view.View" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ProgressBar
            android:layout_width="@dimen/size_p30"
            android:layout_height="@dimen/size_p30"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{viewModel.loading?View.GONE : View.VISIBLE}"
            >

            <TextView
                android:id="@+id/txt_header"
                style="@style/Ugo.TextAppearance.Text.B1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/size_p16"
                android:text="@string/enter_your_mobile_number_below_to_get_started"
                android:textColor="@color/gray70"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/inputContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_p16"
                android:orientation="horizontal"
                android:weightSum="15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_header"
                >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/countryPickerLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="@dimen/size_auto"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/size_p4"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/countryPicker"
                    app:layout_constraintHorizontal_weight="6"
                    app:layout_constraintStart_toStartOf="@id/countryPicker"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBaseline_toBaselineOf="@id/textInputLayout_phoneNumber"
                    app:expandedHintEnabled="false"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusable="false"
                        android:hint="@string/prefix"
                        android:inputType="number"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.hbb20.CountryCodePicker
                    android:id="@+id/countryPicker"
                    android:layout_width="@dimen/size_auto"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    app:ccp_defaultNameCode="NG"
                    app:ccp_showNameCode="false"
                    app:ccp_arrowSize="0sp"
                    app:ccp_arrowColor="@android:color/transparent"
                    android:layout_marginStart="@dimen/size_p16"
                    android:layout_marginEnd="@dimen/size_p8"
                    android:paddingTop="@dimen/size_p5"
                    app:layout_constraintEnd_toStartOf="@id/textInputLayout_phoneNumber"
                    app:layout_constraintHorizontal_weight="6"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/countryPickerLayout"
                    app:layout_constraintBottom_toBottomOf="@id/countryPickerLayout"

                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout_phoneNumber"
                    style="@style/CustomTextInputLayout"
                    android:layout_width="@dimen/size_auto"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/size_p16"
                    android:layout_weight="14"
                    app:layout_constraintBottom_toBottomOf="@id/countryPickerLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_weight="14"
                    app:layout_constraintStart_toEndOf="@id/countryPicker"
                    app:layout_constraintTop_toTopOf="@id/countryPickerLayout"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_phoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number_hint"
                        android:inputType="number"
                        android:maxLength="14"
                        android:text="@={mobileNumber}"
                        />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textLogin"
                style="@style/Ugo.TextAppearance.Text.B1.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_p24"
                android:text="@string/create_account_login_text"
                android:textColor="@color/gray50"
                app:layout_constraintEnd_toStartOf="@id/textButton"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputContainer"
                />

            <Button
                android:id="@+id/textButton"
                style="@style/Ugo.Widget.Button.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_none"
                android:foreground="?android:attr/selectableItemBackground"
                android:minWidth="@dimen/size_none"
                android:minHeight="@dimen/size_none"
                android:text="@string/create_account_login_button"
                app:disposables="@{disposables}"
                app:layout_constraintBaseline_toBaselineOf="@id/textLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/textLogin"
                app:layout_constraintTop_toTopOf="@id/textLogin"
                app:throttledClicks="@{() -> viewModel.onLoginClicked()}"
                />

            <Button
                android:id="@+id/btn_submit"
                style="@style/Ugo.Widget.Button.Primary"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/size_p16"
                android:layout_marginBottom="16dp"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textAppearance="@style/Ugo.TextAppearance.Text.H6.Medium"
                app:disposables="@{disposables}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:throttledClicks="@{() -> viewModel.onSubmitClicked(mobileNumber)}"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>