<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <!-- region Binding -->
    <data>

        <variable
            name="disposables"
            type="io.reactivex.disposables.CompositeDisposable"
            />

        <variable
            name="mobileNumber"
            type="String"
            />

        <variable
            name="password"
            type="String"
            />

        <variable
            name="viewModel"
            type="com.ugo.datplace.main.base.login.BaseLoginViewModel"
            />

        <import type="android.view.View" />
    </data>

    <!-- endregion -->

    <!-- region Root -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/size_p16"
        android:paddingEnd="@dimen/size_p16"
        >

        <ProgressBar
            android:layout_width="@dimen/size_p30"
            android:layout_height="@dimen/size_p30"
            android:visibility="@{viewModel.loading?View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{viewModel.loading?View.GONE : View.VISIBLE}"
            >

            <TextView
                android:id="@+id/txt_header"
                style="@style/Ugo.TextAppearance.Text.B1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/size_p16"
                android:text="@string/enter_your_mobile_number_below_to_get_started"
                android:textColor="@color/gray70"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/inputContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_p16"
                android:orientation="horizontal"
                android:weightSum="15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_header"
                >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/countryPickerLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="@dimen/size_auto"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/size_p4"
                    app:expandedHintEnabled="false"
                    app:layout_constraintBaseline_toBaselineOf="@id/textInputLayout_phoneNumber"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/countryPicker"
                    app:layout_constraintHorizontal_weight="6"
                    app:layout_constraintStart_toStartOf="@id/countryPicker"
                    app:layout_constraintTop_toTopOf="parent"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusable="false"
                        android:hint="@string/prefix"
                        android:inputType="number"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.hbb20.CountryCodePicker
                    android:id="@+id/countryPicker"
                    android:layout_width="@dimen/size_auto"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/size_p8"
                    android:gravity="center"
                    android:paddingTop="@dimen/size_p5"
                    app:ccp_arrowColor="@android:color/transparent"
                    app:ccp_arrowSize="0sp"
                    app:ccp_defaultNameCode="NG"
                    app:ccp_showNameCode="false"
                    app:layout_constraintBottom_toBottomOf="@id/countryPickerLayout"
                    app:layout_constraintEnd_toStartOf="@id/textInputLayout_phoneNumber"
                    app:layout_constraintHorizontal_weight="6"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/countryPickerLayout"

                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout_phoneNumber"
                    style="@style/CustomTextInputLayout"
                    android:layout_width="@dimen/size_auto"
                    android:layout_height="wrap_content"
                    android:layout_weight="14"
                    app:layout_constraintBottom_toBottomOf="@id/countryPickerLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_weight="14"
                    app:layout_constraintStart_toEndOf="@id/countryPicker"
                    app:layout_constraintTop_toTopOf="@id/countryPickerLayout"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_phoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number_hint"
                        android:inputType="number"
                        android:maxLength="14"
                        android:text="@={mobileNumber}"
                        />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <FrameLayout
                android:id="@+id/textInputLayout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputContainer"
                >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInput_password"
                    style="@style/CustomTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="password_toggle"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/size_p18"
                        android:hint="@string/common_hint_password"
                        android:inputType="textPassword"
                        android:onTextChanged="@{viewModel.onPasswordChanged}"
                        android:text="@={password}"
                        />

                </com.google.android.material.textfield.TextInputLayout>

            </FrameLayout>

            <TextView
                android:id="@+id/forgotPasswordTextView"
                style="@style/Ugo.TextAppearance.Text.B1.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_p8"
                android:background="?selectableItemBackground"
                android:padding="@dimen/size_p8"
                android:paddingStart="@dimen/size_none"
                android:text="@string/forgot_my_password"
                android:textColor="@color/primaryCobalt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout_password"
                tools:ignore="RtlSymmetry"
                />

            <Button
                android:id="@+id/btn_login"
                style="@style/Ugo.Widget.Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_p56"
                android:layout_margin="@dimen/size_p16"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textAppearance="@style/Ugo.TextAppearance.Text.H6.Medium"
                app:disposables="@{disposables}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:throttledClicks="@{() -> viewModel.onLoginClicked(mobileNumber, password)}"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- endregion -->

</layout>
